<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">EMAP</string>
    <string name="sample_device_admin_description">sample_device_admin_description</string>
    <string name="remember_password">记住密码</string>
    <string name="login_btn">登录</string>
    <string name="register_button">注册</string>
    <string name="register_button_text">立即注册</string>
    <string name="version_text">当前版本:</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="plat_setting">平台服务器设置</string>
    <string name="vpn_setting">VPN设置</string>
    <string name="safe_server_setting">安全网关服务器设置</string>
    <string name="ip">&#160;&#160;&#160;地址:&#160;&#160;</string>
    <string name="port">&#160;&#160;&#160;端口:&#160;&#160;</string>


    <string name="login_title">登录</string>
    <string name="login_hint_account">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_hint_company">企业账号</string>
    <string name="login_hint_name">昵称</string>
    <string name="login_hint_phone">手机号</string>
    <string name="login_hint_auth_code">密码</string>

    <string name="title_register">注册</string>


    <string name="uc_input_hint">请输入网址</string>


    <!-- the errorMessage -->
    <string name="cannotbenull">各项信息不能为空</string>


    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>


    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="accountIsEmpty">账号为空</string>
    <string name="accountorpsdIsEmpty">账号或密码为空</string>
    <string name="passwordIsEmpty">密码为空</string>
    <string name="authCodeIsEmpty">验证码为空</string>
    <string name="authCodeIsError">验证码错误！</string>
    <string name="company_empty_tips">企业账号为空！</string>
    <string name="name_empty_tips">昵称为空！</string>
    <string name="phone_empty_tips">手机号为空！</string>
    <string name="auth_code_empty_tips">验证码为空！</string>
    <string name="password_empty_tips">密码为空！</string>
    <string name="phone_match_error">手机号格式错误！</string>


    <string name="user_name">用户名</string>
    <string name="user_name_tips">请输入用户名</string>
    <string name="password">密码</string>
    <string name="password_tips">请输入密码</string>
    <string name="uer_vpn_setting">VPN用户设置</string>
    <string name="lock_screen_now">立即锁屏</string>
    <string name="lock_screen_setting">锁屏设置</string>
    <string name="loginsuccess">登录成功</string>
    <string name="permission_rationale_message">你拒绝了该应用的申请授权，请同意授权。</string>
    <string name="permission_denied_forever_message">该应用需要一些您拒绝的权限，否则将导致该应用部分功能将无法使用。</string>

</resources>
